--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <link rel="stylesheet" href="css/preloader.css">
     <!-- Main CSS -->
     <link rel="stylesheet" href="css/style.css">
-    <title>Beam - Free Bootstrap Template</title>
+    <title>AppFinder - One-Click app installer</title>
 </head>
 
 <body data-spy="scroll" data-target=".navbar">
@@ -89,7 +89,7 @@
                         <div class="caption">
                             <h1>Make installing apps Easy with AppFinder</h1>
                             <p class="sub">Discover and install your favrite apps with One-Click</p>
-                            <a class="btn btn-primary" href="#">Download Now</a>
+                            <a class="btn btn-primary" href="https://github.com/appfinder/app-finder-releases/releases/download/untagged-771745229191652e1d11/AppFinder-Setup-0.0.3.exe">Download Now</a>
                             <!-- / Macbook IMG / -->
                             <img class="img-fluid mx-auto wow fadeInUp" data-wow-duration="1s" data-wow-delay=".3s" src="imgs/macbook.png" alt="macbook">
                         </div>
@@ -272,7 +272,7 @@
 
             <!-- /// CONTACT FORMS /// -->
 
-            <form>
+            <!-- <form>
                 <div class="form-row">
                     <div class="form-group col-xs-12 col-sm-4">
                         <label>Name:</label>
@@ -296,7 +296,7 @@
                     <textarea id="form-message" cols="30" rows="5" class="form-control"></textarea>
                 </div>
                 <button type="submit" class="btn btn-primary">Send Message</button>
-            </form>
+            </form> -->
             <p>&copy; Beam All Right Reserved 2018. Made By Bakhtari Badr</p>
         </div>
     </section>
