--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                             <p class="sub">Discover and install your favrite apps with One-Click</p>
                             <a class="btn btn-primary" href="https://github.com/appfinder/app-finder-releases/releases/download/untagged-771745229191652e1d11/AppFinder-Setup-0.0.3.exe">Download Now</a>
                             <!-- / Macbook IMG / -->
-                            <img class="img-fluid mx-auto wow fadeInUp" data-wow-duration="1s" data-wow-delay=".3s" src="imgs/screenshots/1.png" alt="macbook">
+                            <img class="img-fluid mx-auto wow fadeInUp" data-wow-duration="1s" data-wow-delay=".3s" src="imgs/screenshots/my1.png" alt="macbook">
                         </div>
                     </div>
                 </div>
