--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <div class="container">
                 <!-- // Brand // -->
 
-                <a class="navbar-brand" href="#">B<span>ea</span>M</a>
+                <a class="navbar-brand" href="#"><span>A</span>pp<span>F</span>inder</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation"><i class="material-icons">menu</i></button>
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <!-- / NavLinks / -->
@@ -88,10 +88,10 @@
                         <!-- // Caption // -->
                         <div class="caption">
                             <h1>Make installing apps Easy with AppFinder</h1>
-                            <p class="sub">Discover and install your favrite apps with One-Click</p>
+                            <p class="sub">Discover and install your favorite apps with One-Click</p>
                             <a class="btn btn-primary" href="https://github.com/appfinder/app-finder-releases/releases/download/untagged-771745229191652e1d11/AppFinder-Setup-0.0.3.exe">Download Now</a>
                             <!-- / Macbook IMG / -->
-                            <img class="img-fluid mx-auto wow fadeInUp" data-wow-duration="1s" data-wow-delay=".3s" src="imgs/screenshots/my1.png" alt="macbook">
+                            <img class="img-fluid mx-auto wow fadeInUp" data-wow-duration="1s" data-wow-delay=".3s" src="imgs/my1_macbookpro13_front.png" alt="macbook">
                         </div>
                     </div>
                 </div>
@@ -112,7 +112,6 @@
             <div class="row">
                 <div class="col-md-6 col-sm-offset-2 text-center mx-auto">
                     <h2 class="section-title">Features designed for you:</h2>
-                    <p>But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born.</p>
                 </div>
             </div>
             <!-- /// Features /// -->
@@ -122,49 +121,56 @@
                         <i data-vi="processor" data-vi-primary="#cfecff" data-vi-accent="#60b6f4" data-vi-prop="#CEFAFF"></i>
                     </div>
                     <h4>No spyware</h4>
-                    <p>Our repositry is verified and tested for malware, adware and viruses.</p>
+                    <p>Our repository is verified and tested for malware, adware and viruses.</p>
                 </div>
                 <div class="col-md-4 feature wow bounceIn" data-wow-duration=".5s" data-wow-delay=".4s">
                     <div class="feature-icon">
                         <i data-vi="newspaper" data-vi-primary="#60b6f4" data-vi-accent="#cfecff" data-vi-prop="#CEFAFF"></i>
                     </div>
                     <h4>Your favorite tools                    </h4>
-                    <p>All your favrite tools in one place updated to the latest stable versions.</p>
+                    <p>All your favorite tools in one place updated to the latest stable versions.</p>
                 </div>
                 <div class="col-md-4 feature wow bounceIn" data-wow-duration=".5s" data-wow-delay=".6s">
                     <div class="feature-icon">
                         <i data-vi="controller" data-vi-primary="#60b6f4" data-vi-accent="#cfecff" data-vi-prop="#CEFAFF"></i>
                     </div>
                     <h4>No bloatware</h4>
-                    <p>Only get what you want , no added bundels, bloatware toolbars or hidden apps.</p>
+                    <p>Only get what you want, no added bundled, bloatware toolbars or hidden apps.</p>
                 </div>
                 <div class="col-md-4 feature wow bounceIn" data-wow-duration=".5s" data-wow-delay="1.2s">
                     <div class="feature-icon">
                         <i data-vi="cloud" data-vi-primary="#60b6f4" data-vi-accent="#60b6f4" data-vi-prop="#CEFAFF"></i>
                     </div>
                     <h4>Unmaned</h4>
-                    <p>No more sitting at your screen clicking next buttons, just One click is all it takes. </p>
+                    <p>No more sitting at your screen, clicking next buttons, just One click is all it takes.</p>
                 </div>
                 <div class="col-md-4 feature wow bounceIn" data-wow-duration=".5s" data-wow-delay=".8s">
                     <div class="feature-icon">
                         <i data-vi="doc" data-vi-primary="#60b6f4" data-vi-accent="#cfecff" data-vi-prop="#CEFAFF"></i>
                     </div>
                     <h4>Free</h4>
-                    <p>App finder is free to use, there are ni hidden fees and no ads</p>
+                    <p>AppFinder is free to use, there are no hidden fees and no ads</p>
                 </div>
                 <div class="col-md-4 feature wow bounceIn" data-wow-duration=".5s" data-wow-delay="1s">
                     <div class="feature-icon">
                         <i data-vi="user" data-vi-primary="#cfecff" data-vi-accent="#60b6f4" data-vi-prop="#CEFAFF"></i>
                     </div>
                     <h4>User Friendly</h4>
-                    <p>Appfinder is optimised to make it easy to dicover, find and install all your favrite apps with one simple click.</p>
+                    <p>Appfinder  is optimised to make it easy to discover, find and install all your favorite apps with one simple click.</p>
                 </div>
                 <div class="col-md-4 feature wow bounceIn" data-wow-duration=".5s" data-wow-delay="1.2s">
                     <div class="feature-icon">
                         <i data-vi="cloud" data-vi-primary="#60b6f4" data-vi-accent="#60b6f4" data-vi-prop="#CEFAFF"></i>
                     </div>
                     <h4>Bulk install</h4>
-                    <p>choose as much of your favrites apps to be installed. </p>
+                    <p>AppFinder let choose as many of your favorite apps to be installed. </p>
+                </div>
+                <div class="col-md-4 feature wow bounceIn" data-wow-duration=".5s" data-wow-delay="1.2s">
+                    <div class="feature-icon">
+                        <i data-vi="cloud" data-vi-primary="#60b6f4" data-vi-accent="#60b6f4" data-vi-prop="#CEFAFF"></i>
+                    </div>
+                    <h4>No limits/quotas</h4>
+                    <p>AppFinder let you install as many apps as you want. </p>
                 </div>
             </div>
         </div>
