--- a/index.html
+++ b/index.html
@@ -194,8 +194,8 @@
             <div class="row">
                 <div class="col-md-6 col-sm-offset-2 col-md-offset-3 text-center title-container">
                     <!-- /// Title /// -->
-                    <h2 class="section-title">Our repostry of trsuted apps is growing every day</h2>
-                    <p>Hundrends of the best apps are already wating for you.</p>
+                    <h2 class="section-title">Our registry of trusted apps is growing every day</h2>
+                    <p>Hundreds of the best apps are already waiting for you.</p>
                 </div>
             </div>
             <div class="row">
@@ -233,7 +233,7 @@
     VIDEO POP UP 
     =============================================== -->
 
-    <div id="video-popup">
+    <!-- <div id="video-popup">
         <div class="container">
             <div class="row">
                 <div class="col-xs-12 col-sm-8 col-sm-offset-2 video-box">
@@ -249,7 +249,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
 
     <!-- ==============================================
     TEAM
@@ -268,13 +268,7 @@
 
     <section id="contact">
         <div class="container">
-            <div class="row">
-                <div class="col-xs-12 col-sm-8 col-md-6 col-sm-offset-2 col-md-offset-3 text-center title-container">
-                    <!-- /// Title /// -->
-                    <h2 class="section-title">Don't Be Shy Send a Message:</h2>
-                    <p>But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born.</p>
-                </div>
-            </div>
+            
 
             <!-- /// CONTACT FORMS /// -->
 
@@ -303,7 +297,7 @@
                 </div>
                 <button type="submit" class="btn btn-primary">Send Message</button>
             </form> -->
-            <p>&copy; Beam All Right Reserved 2018. Made By Bakhtari Badr</p>
+            <p>&copy; AppFinder All Right Reserved 2019. </p>
         </div>
     </section>
 
