--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                         <div class="caption">
                             <h1>Make installing apps Easy with AppFinder</h1>
                             <p class="sub">Discover and install your favorite apps with One-Click</p>
-                            <a class="btn btn-primary" href="https://github.com/appfinder/app-finder-releases/releases/download/untagged-771745229191652e1d11/AppFinder-Setup-0.0.3.exe">Download Now</a>
+                            <a class="btn btn-primary" href="https://github.com/appfinder/app-finder-releases/releases/latest/download/AppFinderSetup.exe">Download Now</a>
                             <!-- / Macbook IMG / -->
                             <img class="img-fluid mx-auto wow fadeInUp" data-wow-duration="1s" data-wow-delay=".3s" src="imgs/my1_macbookpro13_front.png" alt="macbook">
                         </div>
