--- a/index.html
+++ b/index.html
@@ -25,6 +25,17 @@
     <!-- Main CSS -->
     <link rel="stylesheet" href="css/style.css">
     <title>AppFinder - One-Click app installer</title>
+    
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-159687027-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-159687027-1');
+</script>
+
 </head>
 
 <body data-spy="scroll" data-target=".navbar">
