--- a/index.html
+++ b/index.html
@@ -27,14 +27,15 @@
     <title>AppFinder - One-Click app installer</title>
     
     <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-159687027-1"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'UA-159687027-1');
-</script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-165117057-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+        
+      gtag('config', 'UA-165117057-1');
+    </script>
+    <link rel="shortcut icon" href="https://raw.githubusercontent.com/appfinder/appfinder.github.io/master/favicon.ico" />
 
 </head>
 
