--- a/index.html
+++ b/index.html
@@ -245,13 +245,13 @@
     VIDEO POP UP 
     =============================================== -->
 
-    <!-- <div id="video-popup">
+      <div id="video-popup">
         <div class="container">
             <div class="row">
                 <div class="col-xs-12 col-sm-8 col-sm-offset-2 video-box">
                     <img src="imgs/video-bg.png" class="img-fluid wow rotateIn" data-wow-duration=".5s" data-wow-delay=".2s" alt="popup">
                     <div class="play-button">
-                        <a class="bla-2 wow flipInY" data-wow-duration=".5s" data-wow-delay=".4s" href="https://www.youtube.com/watch?v=3qyhgV0Zew0"><i class="material-icons">play_arrow</i></a>
+                        <a class="bla-2 wow flipInY" data-wow-duration=".5s" data-wow-delay=".4s" href="https://www.youtube.com/watch?v=XnKYVcman7c"><i class="material-icons">play_arrow</i></a>
                         <div class="waves-block">
                             <div class="waves wave-1"></div>
                             <div class="waves wave-2"></div>
@@ -261,7 +261,7 @@
                 </div>
             </div>
         </div>
-    </div> -->
+    </div> 
 
     <!-- ==============================================
     TEAM
